--- a/website/tutorial/basic/10-subscriptions.mdx
+++ b/website/tutorial/basic/10-subscriptions.mdx
@@ -312,7 +312,7 @@ database.
 
 Open `prisma/schema.prisma` and adjust it to look as follows:
 
-```graphql
+```prisma
 model Link {
   id          Int      @id @default(autoincrement())
   createdAt   DateTime @default(now())
@@ -351,7 +351,7 @@ As you can see, you added a new `Vote` type to the data model. It has one-to-man
 
 Now migrate your database schema with the following commands:
 
-```
+```bash
 npx prisma migrate dev --name "add-vote-model"
 ```
 
