--- a/website/tutorial/basic/00-introduction.mdx
+++ b/website/tutorial/basic/00-introduction.mdx
@@ -9,20 +9,20 @@ sidebar_label: Introduction
 GraphQL is the rising star of backend technologies. It's a popular alternative for REST as an API design paradigm and is becoming the new
 standard for exposing the data and functionality of a web server.
 
-In this tutorial, you'll learn how to build an _idiomatic_ GraphQL server entirely from scratch.
+In this tutorial, you'll learn how to build a GraphQL HTTP server entirely from scratch.
 
 You are going to use the following technologies:
 
 - [Node.js](https://nodejs.org/) - as an engine and runtime for our server.
 - [TypeScript](https://www.typescriptlang.org/) - a strongly typed programming language which builds on JavaScript giving you better tooling at any scale.
-- `graphql-yoga`- the easiest way of running a GraphQL server.
+- `graphql-yoga`- the easiest way of build an HTTP GraphQL server.
 - [`graphql-js`](https://github.com/graphql/graphql-js) - we will use the core `graphql` library as execution engine for our server.
 - [GraphiQL](https://github.com/graphql/graphiql): A graphical interface that allows you to interactively
   explore the functionality of a GraphQL API by sending query, mutation and subscription operations. It's somewhat similar to
   [Postman](https://www.getpostman.com/) which offers comparable functionality for REST APIs. Among other things,
   GraphiQL:
   - Auto-generates comprehensive documentation for all available API operations.
-  - Provides an editor where you can write queries, mutations & subscriptions, with auto-completion(!) and syntax
+  - Provides an editor where you can write queries, mutations & subscriptions with auto-complete and syntax
     highlighting.
 - [SQLite](https://www.sqlite.org/): A lightweight and easy to use relational database management system for persisting data on the file system.
 - [Prisma](https://www.prisma.io/): The glue between your code and SQLite database. Use Prisma Client to access your database inside of
@@ -37,7 +37,7 @@ rundown of what to expect.
 
 You'll start by learning the basics of how a GraphQL server works, simply by defining a
 [_GraphQL schema_](https://www.prisma.io/blog/graphql-server-basics-the-schema-ac5e2950214e) for the server and writing
-corresponding _resolver functions_ for retriving data. In the beginning, these resolvers will only work with data that's stored in-memory -
+corresponding _resolver functions_ for retrieving data. In the beginning, these resolvers will only work with data that's stored in-memory -
 so nothing will persist beyond the runtime of the server.
 
 Nobody wants a server that's not able to store and persist data, right? Not to worry! Next, you're going to add a
@@ -48,9 +48,9 @@ Once you have the database connected, you are going to add more advanced feature
 You'll start by implementing signup/login functionality that enables users to authenticate against the API. This will
 also allow you to check the permissions of your users for certain API operations.
 
-Next, you'll allow the consumers of the API to constrain the list of items they retrieve from the API by adding
-filtering and pagination capabilities to it.
+Next, we will make a part of the API real-time by adding GraphQL subscriptions!
 
-Last but not least, we will make a part of the API real-time by adding GraphQL subscriptions!
+Finally, you'll allow the consumers of the API to constrain the list of items they retrieve from the API by adding
+filtering and pagination capabilities to it.
 
 Let's get started 🚀
