--- a/website/tutorial/basic/08-authentication.mdx
+++ b/website/tutorial/basic/08-authentication.mdx
@@ -16,7 +16,7 @@ You'll also want to add a _relation_ between the `User` and the existing `Link` 
 
 Open `prisma/schema.prisma` and add the following code, making sure to also update your existing `Link` model accordingly:
 
-```graphql
+```prisma
 model Link {
   id          Int      @id @default(autoincrement())
   createdAt   DateTime @default(now())
