--- a/website/tutorial/basic/09-error-handling.mdx
+++ b/website/tutorial/basic/09-error-handling.mdx
@@ -4,6 +4,8 @@ title: Error Handling
 sidebar_label: Error Handling
 ---
 
+TODO: REVAMP THIS CHAPTER
+
 In the previous chapter you added authorization logic to our GraphQL resolver functions that throw `Error` instances. In this chapter you will learn how Yoga handles such errors and how you can improve the error experience for API users.
 
 ### Recap of our current resolver Authorization logic
