--- a/website/tutorial/basic/04-a-simple-query.mdx
+++ b/website/tutorial/basic/04-a-simple-query.mdx
@@ -133,13 +133,11 @@ Awesome, the server responds with the data you defined in `links`:
 
 ![data returned from the server](https://i.imgur.com/vmzqOgl.png)
 
-Feel free to play around with the query by removing any fields from the selection set and observe the responses sent by
-the server.
+Feel free to play around with the query by removing any fields from the selection set and observe the responses sent by the server.
 
 ### The query resolution process
 
-Let's now quickly talk about how a GraphQL server actually resolves incoming requests. As you already saw, a GraphQL
-operation contains a selections set of _fields_ that have their source in the type definitions of the GraphQL schema.
+Let's now quickly talk about how a GraphQL server actually resolves incoming requests. As you already saw, a GraphQL operation contains a selections set of _fields_ that have their source in the type definitions of the GraphQL schema.
 
 Let's consider the following query operation from above again:
 
@@ -153,13 +151,9 @@ query {
 }
 ```
 
-All four fields specified in the query operations selection set (`feed`, `id`, `url`, and `description`) can also be found inside the schema
-definition. You also learned that _every_ field inside the schema definition is backed by one resolver function
-whose responsibility it is to return the data for precisely that field.
+All four fields specified in the query operations selection set (`feed`, `id`, `url`, and `description`) can also be found inside the schema definition. You also learned that _every_ field inside the schema definition is backed by one resolver function whose responsibility it is to return the data for precisely that field.
 
-Can you imagine what the query resolution process looks like now? Effectively, the GraphQL server has to
-invoke all resolver functions for the fields that are selection in the operation and then package up the response according
-to the selection sets shape. The resolution thus merely becomes a process of orchestrating the invocation of resolver
+Can you imagine what the query resolution process looks like now? Effectively, the GraphQL server has to invoke all resolver functions for the fields that are selection in the operation and then package up the response according to the selection sets shape. The resolution thus merely becomes a process of orchestrating the invocation of resolver
 functions!
 
 Right now all the resolvers for the `Link` type follow a very simple and trivial pattern:
@@ -172,20 +166,14 @@ Link: {
 }
 ```
 
-First, it's important to note that every GraphQL resolver function actually receives _four_ input arguments. As the
-remaining three are not needed in our scenario right now, we're simply omitting them. Don't worry, you'll get to know
-them soon.
+First, it's important to note that every GraphQL resolver function actually receives _four_ input arguments. As the remaining three are not needed in our scenario right now, we're simply omitting them. Don't worry, you'll get to know them soon.
 
-The first argument, commonly called `parent` (or sometimes `root`) is the result of the previous _resolver execution
-level_. Hang on, what does that mean? 🤔
+The first argument, commonly called `parent` (or sometimes `root`) is the result of the previous _resolver execution level_. Hang on, what does that mean? 🤔
 
 Well, as you already saw, GraphQL operation selection sets can be _nested_. Each level of nesting (i.e. nested curly braces) corresponds
 to one resolver execution level. The above query operation therefore has two of these execution levels.
 
-On the first level, it invokes the `Query.feed` resolver and returns the entire data stored in `links`. For the second
-execution level, the GraphQL server is smart enough to invoke the resolvers of the `Link` type (because thanks to the
-schema, it knows that `feed` returns a list of `Link` elements) for each element inside the list that was returned on
-the previous resolver level. Therefore, in all of the three `Link` resolvers, the incoming `parent` object is the
+On the first level, it invokes the `Query.feed` resolver and returns the entire data stored in `links`. For the second execution level, the GraphQL server is smart enough to invoke the resolvers of the `Link` type (because thanks to the schema, it knows that `feed` returns a list of `Link` elements) for each element inside the list that was returned on the previous resolver level. Therefore, in all of the three `Link` resolvers, the incoming `parent` object is the
 element inside the `links` list.
 
 > **Note**: To learn more about this, check out
