--- a/website/tutorial/basic/09-error-handling.mdx
+++ b/website/tutorial/basic/09-error-handling.mdx
@@ -4,52 +4,52 @@ title: Error Handling
 sidebar_label: Error Handling
 ---
 
-TODO: REVAMP THIS CHAPTER
+In the previous chapter you encountered an error while executing a `Mutation.postCommentOnLink` operation.
+In this chapter you will learn the origin of this error and learn how to properly handle it.
 
-In the previous chapter you added authorization logic to our GraphQL resolver functions that throw `Error` instances. In this chapter you will learn how Yoga handles such errors and how you can improve the error experience for API users.
+### Recap of the encountered error
 
-### Recap of our current resolver Authorization logic
-
-The authorization logic within the resolvers is a simple if condition for checking whether the `currentUser` property on the `context` object is `null`. If the value is `null` an error is thrown, otherwise, any further business logic is executed.
+This the resolver implementation that caused the issue when using a `linkId` that has no counter-part within the database.
 
 ```ts
 const resolvers = {
   // ... other resolver maps ...
   Mutation: {
     // ... other Mutation object type field resolver functions ...
-    post: async (
+    postCommentOnLink: async (
       parent: unknown,
-      args: { url: string; description: string },
+      args: { linkId: string; body: string },
       context: GraphQLContext,
     ) => {
-      // authorization logic
-      if (context.currentUser === null) {
-        throw new Error('Unauthenticated!')
-      }
-
-      const newLink = await context.prisma.link.create({
+      const comment = await context.prisma.comment.create({
         data: {
-          url: args.url,
-          description: args.description,
-          postedBy: { connect: { id: context.currentUser.id } },
+          body: args.body,
+          linkId: parseInt(args.linkId),
         },
       })
 
-      return newLink
+      return comment
     },
   },
 }
 ```
 
-When executing the following mutation without an authorization token, you will receive an error.
+<Instruction>
+
+Execute the following GraphQL operation on GraphiQL:
 
 ```graphql
-mutation {
-  post(description: "Google", url: "http://google.de") {
+mutation postCommentOnLink {
+  postCommentOnLink(linkId: "99999999999", body: "This is my second comment!") {
     id
+    body
   }
 }
 ```
+
+</Instruction>
+
+Again, this should yield in the following error response:
 
 ```json
 {
@@ -62,11 +62,11 @@ mutation {
           "column": 3
         }
       ],
-      "path": ["post"],
+      "path": ["postCommentOnLink"],
       "extensions": {
         "originalError": {
-          "message": "Unauthenticated!",
-          "stack": "Error: Unauthenticated!\n    at hackernews-node-ts/src/schema.ts:80:15\n    at Generator.next (<anonymous>)\n    at hackernews-node-ts/src/schema.ts:8:71\n    at new Promise (<anonymous>)\n    at __awaiter (hackernews-node-ts/src/schema.ts:4:12)\n    at Object.post (hackernews-node-ts/src/schema.ts:78:9)\n    at executeField (hackernews-node-ts/node_modules/graphql/execution/execute.js:479:20)\n    at hackernews-node-ts/node_modules/graphql/execution/execute.js:375:22\n    at promiseReduce (hackernews-node-ts/node_modules/graphql/jsutils/promiseReduce.js:23:9)\n    at executeFieldsSerially (hackernews-node-ts/node_modules/graphql/execution/execute.js:371:43)"
+          "message": "\nInvalid `context.prisma.comment.create()` invocation in\nhackernews/src/schema.ts:69:52\n\n   66   args: { linkId: string; body: string },\n   67   context: GraphQLContext,\n   68 ) => {\n→  69   const comment = await context.prisma.comment.create(\n  Foreign key constraint failed on the field: `foreign key`",
+          "stack": "Error: \nInvalid `context.prisma.comment.create()` invocation in\nhackernews/src/schema.ts:69:52\n\n   66   args: { linkId: string; body: string },\n   67   context: GraphQLContext,\n   68 ) => {\n→  69   const comment = await context.prisma.comment.create(\n  Foreign key constraint failed on the field: `foreign key`\n    at cb (hackernews/node_modules/@prisma/client/runtime/index.js:38703:17)\n    at PrismaClient._request (hackernews/node_modules/@prisma/client/runtime/index.js:40859:18)"
         }
       }
     }
@@ -75,13 +75,14 @@ mutation {
 }
 ```
 
-As you can see the error includes an `extensions` `originalError` field with the original error that we throw within our `Mutation.post` field resolver function. It includes a full stack-trace of the original error for finding the cause easily.
+As you can see the error includes an `extensions` `originalError` field.
+It includes a full stack-trace of the original error for finding the cause easily.
 
 ## Yoga Error Masking
 
-In a production environment, such a stack-trace that is leaked to the outside world is a potential security thread as that information could be misused for malicous attacks.
+In a production environment, a stack-trace that leaks to the outside world is a potential security threat as that information could be misused by malicous actors.
 
-The `extensions` `originalError` field is only present within the error if the server has been started with the `NODE_ENV` environment variable being set to `development`.
+The `extensions` `originalError` field is only present within on an error if the server has been started with the `NODE_ENV` environment variable being set to `development`.
 
 As you might remember this is only the case when you are starting the server using `npm run dev`.
 
@@ -96,16 +97,17 @@ npm run start
 Then execute the same operation again.
 
 ```graphql
-mutation {
-  post(description: "Google", url: "http://google.de") {
+mutation postCommentOnLink {
+  postCommentOnLink(linkId: "99999999999", body: "This is my second comment!") {
     id
+    body
   }
 }
 ```
 
 </Instruction>
 
-Now you can see that there is no `originalError` within the error.
+Now you can see that there is no `originalError` within the errors array first object.
 
 ```json
 {
@@ -118,26 +120,24 @@ Now you can see that there is no `originalError` within the error.
           "column": 3
         }
       ],
-      "path": ["post"]
+      "path": ["postCommentOnLink"]
     }
   ],
   "data": null
 }
 ```
 
-This is great, but now we never know whether our request failed because of authentication issues or some other unexpected issue 9e.g. a corrupted database 🤔).
-
-The error message `Unexpected error.` is also not really helpful as an authentication error is kind of something we can expect.
+This is great, but now we never know why our request failed 🤔and the error message `Unexpected error.` is also not helpful to anyone not aware of the exact resolver function implementation.
 
 ## Exposing safe error messages
 
-So let's say instead of the message `Unexpected error.`, we instead want to raise an error with the message `Unauthenticated!`.
+Let's change the implementation to expose the much more helpful message `Cannot post common on non-existing link with id 'X'.` instead of `Unexpected error.`.
 
-The `@graphql-yoga/node` package exports the `GraphQLYogaError` class.
+For doing, so you will use the `GraphQLYogaError` class that is exported from the `@graphql-yoga/node` package.
 
 <Instruction>
 
-Instead of throwing an `Error` you will adjust the code within `src/schema.ts` to throw an `GraphQLYogaError` instead.
+Add the following catch handler for mapping a foreign key error into a `GraphQLYogaError`.
 
 ```typescript
 // ... other imports ...
@@ -148,25 +148,33 @@ const resolvers = {
   // ... other resolver maps ...
   Mutation: {
     // ... other Mutation object type field resolver functions ...
-    post: async (
+    postCommentOnLink: async (
       parent: unknown,
-      args: { url: string; description: string },
+      args: { linkId: string; body: string },
       context: GraphQLContext,
     ) => {
-      // authorization logic
-      if (context.currentUser === null) {
-        throw new GraphQLYogaError('Unauthenticated!')
-      }
+      const comment = await context.prisma.comment
+        .create({
+          data: {
+            body: args.body,
+            linkId: parseInt(args.linkId),
+          },
+        })
+        .catch((err: unknown) => {
+          if (
+            err instanceof PrismaClientKnownRequestError &&
+            err.code === 'P2003'
+          ) {
+            return Promise.reject(
+              new GraphQLYogaError(
+                `Cannot post common on non-existing link with id '${args.linkId}'.`,
+              ),
+            )
+          }
+          return Promise.reject(err)
+        })
 
-      const newLink = await context.prisma.link.create({
-        data: {
-          url: args.url,
-          description: args.description,
-          postedBy: { connect: { id: context.currentUser.id } },
-        },
-      })
-
-      return newLink
+      return comment
     },
   },
 }
@@ -174,34 +182,38 @@ const resolvers = {
 
 </Instruction>
 
+The error code `P2003` indicates a foreign key contraint error. [You can learn more about it in the prisma documentation](https://www.prisma.io/docs/reference/api-reference/error-reference#p2003).
+You use that code for identifying this edge case of a missing link and then throw a `GraphQLYogaError` with an useful error message instead.
+
 <Instruction>
 
-Restart the server using `npm run dev` and execute the mutation operation again without an authorization token.
+Restart the server using `npm run dev` and again execute the mutation operation using GraphiQL.
 
 ```graphql
-mutation {
-  post(description: "Google", url: "http://google.de") {
+mutation postCommentOnLink {
+  postCommentOnLink(linkId: "99999999999", body: "This is my second comment!") {
     id
+    body
   }
 }
 ```
 
 </Instruction>
 
-You will receive a response with the `Unauthenticated!` message.
+You will receive a response with the `Cannot post common on non-existing link with id '99999999999'.` message.
 
 ```json
 {
   "errors": [
     {
-      "message": "Unauthenticated!",
+      "message": "Cannot post common on non-existing link with id '99999999999'.",
       "locations": [
         {
           "line": 2,
           "column": 3
         }
       ],
-      "path": ["me"]
+      "path": ["postCommentOnLink"]
     }
   ],
   "data": null
@@ -210,46 +222,8 @@ You will receive a response with the `Unauthenticated!` message.
 
 <Instruction>
 
-Restart the server using `npm run start` and execute the mutation operation again without an authorization token.
+As you might have noticed, GraphQLYoga will exclude `GraphQLYogaError` errors thrown within the resolvers from masking the error masking.
 
-```graphql
-mutation {
-  post(description: "Google", url: "http://google.de") {
-    id
-  }
-}
-```
+That means everytime you want to expose an error to the outside world you should throw an `GraphQLYogaError` error.
 
-</Instruction>
-
-Even without `NODE_ENV` being set to `development` you will receive the same `Unauthenticated!` message.
-
-```json
-{
-  "errors": [
-    {
-      "message": "Unauthenticated!",
-      "locations": [
-        {
-          "line": 2,
-          "column": 3
-        }
-      ],
-      "path": ["me"]
-    }
-  ],
-  "data": null
-}
-```
-
-GraphQLYoga will exclude `GraphQLYogaError` errors being thrown within the resolvers from masking.
-
-That means everytime you want to expose an error to the outside world you should throw a `GraphQLYogaError` error.
-
-Any other unexpected errors will automatically masked from the outside world, bringing you sensible and safe defaults for your future Yoga production deployment!
-
-<Instruction>
-
-You can now replace all remaining `Error` constructor calls with `GraphQLYogaError` constructor calls.
-
-</Instruction>
+At the same time any other unexpected error will automatically be masked from the outside world, bringing you sensible and safe defaults for a GraphQL Yoga production deployment!
