--- a/website/tutorial/basic/10-filtering-and-pagination.mdx
+++ b/website/tutorial/basic/10-filtering-and-pagination.mdx
@@ -14,7 +14,7 @@ Let's jump in! 🚀
 
 By using `PrismaClient`, you'll be able to implement filtering capabilities to your API without too much effort.
 Similarly to the previous chapters, the heavy-lifting of query resolution will be performed by Prisma. All you need to
-do is pass the correct parameters within the field resolvers.
+do is pass the correct parameters within the field resolver functions.
 
 The first step is to think about the filters you want to expose through your API. In your case, the `Query.feed` field in your
 API will accept a _filter string_. The query then should only return the `Link` elements where the `url` _or_ the
@@ -22,39 +22,39 @@ API will accept a _filter string_. The query then should only return the `Link` 
 
 <Instruction>
 
-Go ahead and add the `filter` string to the `feed` query in your application schema (under `src/schema.ts`):
+Go ahead and add the `filter` argument definition of the type `String` to the `Query.feed` field definition within in your application schema (under `src/schema.ts`):
 
 ```graphql
 type Query {
   info: String!
-  feed(filter: String): [Link!]!
+  feed(filterNeedle: String): [Link!]!
   me: User!
 }
 ```
 
 </Instruction>
 
-Next, you need to update the implementation of the `feed` resolver to account for the new parameter clients can provide.
+Next, you need to update the implementation of the `Query.feed` resolver function to account for the new arguments clients can send when executing a GraphQL query operation.
 
 <Instruction>
 
-Now, update the `feed` resolver to look as follows:
+Now, update the `Query.feed` resolver function to look as follows:
 
 ```typescript
 const resolvers = {
-  // ... other resolvers ...
+  // ... other resolver maps ...
   Query: {
-    // ... other resolvers ...
+    // ... other Query object type field resolver functions ...
     feed: async (
       parent: unknown,
-      args: { filter?: string },
+      args: { filterNeedle?: string },
       context: GraphQLContext,
     ) => {
-      const where = args.filter
+      const where = args.filterNeedle
         ? {
             OR: [
-              { description: { contains: args.filter } },
-              { url: { contains: args.filter } },
+              { description: { contains: args.filterNeedle } },
+              { url: { contains: args.filterNeedle } },
             ],
           }
         : {}
@@ -67,18 +67,16 @@ const resolvers = {
 
 </Instruction>
 
-If no `filter` string is provided, then the `where` object will be just an empty object and no filtering conditions will
-be applied by Prisma Client when it returns the response for the `Query.links` field.
+If no `filterNeedle` argument value is provided, then the `where` object will be just an empty object and no filtering conditions will be applied by Prisma Client when it resolves the data for the `Query.links` field.
 
-In cases where there is a `filter` carried by the incoming `args`, you're constructing a `where` object that expresses
-our two filter conditions from above. This `where` argument is used by Prisma to filter out those `Link` elements that
+In cases where there is a `filterNeedle` argument provided when executing the `Query.links` field resolver, you're constructing a `where` object that expresses our two filter conditions from above. This `where` argument is used by Prisma to filter out those `Link` elements that
 don't adhere to the specified conditions.
 
 That's it for the filtering functionality! Go ahead and test your filter API - here's a sample query operation you can use:
 
 ```graphql
 query {
-  feed(filter: "QL") {
+  feed(filterNeedle: "QL") {
     id
     description
     url
@@ -103,8 +101,7 @@ Pagination is a tricky topic in API design. On a high-level, there are two major
   count of items to be retrieved.
 
 Prisma supports both pagination approaches (read more in the
-[docs](https://www.prisma.io/docs/reference/tools-and-interfaces/prisma-client/pagination)). In this tutorial, you're
-going to implement limit-offset pagination.
+[docs](https://www.prisma.io/docs/reference/tools-and-interfaces/prisma-client/pagination)). In this tutorial, you're going to implement limit-offset pagination.
 
 > **Note**: You can read more about the ideas behind both pagination approaches
 > [here](https://dev-blog.apollodata.com/understanding-pagination-rest-graphql-and-relay-b10f835549e7).
@@ -112,27 +109,25 @@ going to implement limit-offset pagination.
 Limit and offset have different names in the Prisma API:
 
 - The _limit_ is called `take`, meaning you're "taking" `x` elements after a provided start index.
-- The _start index_ is called `skip`, since you're skipping that many elements in the list before collecting the items
-  to be returned. If `skip` is not provided, it's `0` by default. The pagination then always starts from the beginning
-  of the list.
+- The _start index_ is called `skip`, since you're skipping that many elements in the list before collecting the items to be returned. If `skip` is not provided, it's `0` by default. The pagination then always starts from the beginning of the list.
 
-So, go ahead and add the `skip` and `take` arguments to the `feed` query.
+So, go ahead and add the `skip` and `take` arguments to the `Query.field` field definition.
 
 <Instruction>
 
-Open your application schema and adjust the `feed` query to accept `skip` and `take` arguments:
+Open your schema definitions and adjust the `Query.field` field to have a `skip` and `take` argument of the `Int` type defined:
 
 ```graphql
 type Query {
   info: String!
-  feed(filter: String, skip: Int, take: Int): [Link!]!
+  feed(filterNeedle: String, skip: Int, take: Int): [Link!]!
   me: User!
 }
 ```
 
 </Instruction>
 
-Now, adjust the resolver implementation:
+Now, adjust the field resolver function implementation:
 
 <Instruction>
 
@@ -140,19 +135,19 @@ And now adjust the implementation of the `Query.feed` resolver function:
 
 ```typescript
 const resolvers = {
-  // ... other resolvers ...
+  // ... other resolvers maps ...
   Query: {
-    // ... other resolvers ...
+    // ... other Query object type resolver functions ...
     feed: async (
       parent: unknown,
       args: { filter?: string; skip?: number; take?: number },
       context: GraphQLContext,
     ) => {
-      const where = args.filter
+      const where = args.filterNeedle
         ? {
             OR: [
-              { description: { contains: args.filter } },
-              { url: { contains: args.filter } },
+              { description: { contains: args.filterNeedle } },
+              { url: { contains: args.filterNeedle } },
             ],
           }
         : {}
@@ -169,10 +164,9 @@ const resolvers = {
 
 </Instruction>
 
-Really all that's changing here is that the invocation of the `links` query now receives two additional arguments which
-might be carried by the incoming `args` object. Again, Prisma will take care of the rest.
+Really all that's changing here is that the invocation of the `links` query now receives two additional arguments which might be carried by the incoming `args` object. Again, Prisma will take care of the rest.
 
-You can test the pagination API with the following query which returns the second `Link` from the list:
+You can test the pagination API with the following query operation which returns the second `Link` from the list:
 
 ```graphql
 query {
@@ -185,112 +179,3 @@ query {
 ```
 
 ![test the pagination API ](https://i.imgur.com/XeZgSJo.png)
-
-### Sorting
-
-With Prisma, it is possible to return lists of elements that are sorted (_ordered_) according to specific criteria. For
-example, you can order the list of `Link`s alphabetically by their `url` or `description`. For the Hacker News API,
-you'll leave it up to the client to decide how exactly it should be sorted and thus include all the ordering options
-from the Prisma API in the API of your GraphQL server. You can do so by creating an
-[`input`](https://graphql.org/graphql-js/mutations-and-input-types/) type and an enum to represent the ordering options.
-
-<Instruction>
-
-Add the following enum definition to your GraphQL schema:
-
-```graphql
-input LinkOrderByInput {
-  description: Sort
-  url: Sort
-  createdAt: Sort
-}
-
-enum Sort {
-  asc
-  desc
-}
-```
-
-</Instruction>
-
-This represents the various ways that the list of `Link` elements can be sorted (asc = ascending, desc = descending).
-
-<Instruction>
-
-Now, adjust the `Query.feed` field SDL again to include the `orderBy` argument:
-
-```graphql
-type Query {
-  info: String!
-  feed(
-    filter: String
-    skip: Int
-    take: Int
-    orderBy: LinkOrderByInput
-  ): [Link!]!
-  me: User!
-}
-```
-
-</Instruction>
-
-The implementation of the resolver is similar to what you just did with the pagination API.
-
-<Instruction>
-
-Update the implementation of the `feed` resolver, change the imports and pass the `orderBy` argument along to Prisma:
-
-```typescript
-import { Link, User, Prisma } from '@prisma/client'
-
-const resolvers = {
-  // ... other resolvers ...
-  Query: {
-    // ... other resolvers ...
-    feed: async (
-      parent: unknown,
-      args: {
-        filter?: string
-        skip?: number
-        take?: number
-        orderBy?: {
-          description?: Prisma.SortOrder
-          url?: Prisma.SortOrder
-          createdAt?: Prisma.SortOrder
-        }
-      },
-      context: GraphQLContext,
-    ) => {
-      const where = args.filter
-        ? {
-            OR: [
-              { description: { contains: args.filter } },
-              { url: { contains: args.filter } },
-            ],
-          }
-        : {}
-
-      return context.prisma.link.findMany({
-        where,
-        skip: args.skip,
-        take: args.take,
-        orderBy: args.orderBy,
-      })
-    },
-  },
-}
-```
-
-</Instruction>
-
-Awesome! Here's a query that sorts the returned links by their creation dates:
-
-```graphql
-query {
-  feed(orderBy: { createdAt: asc }) {
-    id
-    description
-    url
-  }
-}
-```
