--- a/website/docs/integrations/integration-with-koa.mdx
+++ b/website/docs/integrations/integration-with-koa.mdx
@@ -29,7 +29,8 @@ app.use('/graphql', async (ctx) => {
   ctx.req.socket.setNoDelay(true)
   ctx.req.socket.setKeepAlive(true)
 
-  const response = await graphQLServer.handleIncomingMessage(ctx.req)
+  // Second parameter adds Koa's context into GraphQL Context
+  const response = await graphQLServer.handleIncomingMessage(ctx.req, ctx)
 
   // Set status code
   ctx.status = response.status
