filtering and pagination sanitization

--- a/website/tutorial/basic/08-graph-relations.mdx
+++ b/website/tutorial/basic/08-graph-relations.mdx
@@ -464,9 +464,9 @@ Congratulations! You just fetched the feed of Link elements and the comments tha
 
 Being able to fetch multiple resources within a single request is on of the main advantages of using GraphQL!
 
-### Optional Tasks
+### Optional Exercise
 
-As an additonal practise you can gain more hands on experience by implementing the resolvers for `Comment.link` and `Query.link`.
+As an additonal exercise you can gain more hands on experience by implementing the resolvers for `Comment.link` and `Query.link`.
 
 ```graphql
 type Comment {
