--- a/website/tutorial/basic/09-error-handling.mdx
+++ b/website/tutorial/basic/09-error-handling.mdx
@@ -431,4 +431,6 @@ All good now. 🎉
 
 Remember, when implementing your GraphQL resolver functions, the input arguments should always be sanitized and validated!
 
-As an optional exercise for internaling the knowledge, you can now also implement validation of the `body` argument. You wouldn't want anyone to post an empty body, right?
+### Optional Exercise
+
+As an optional exercise for interiorizing the knowledge, you can now also implement validation of the `body` argument of `Mutation.postCommentOnLink` and argument sanitzation for the `Mutation.postLink` field. You wouldn't want anyone to post an empty comment or invalid link, right?
