--- a/website/tutorial/basic/11-summary.mdx
+++ b/website/tutorial/basic/11-summary.mdx
@@ -4,8 +4,8 @@ title: Summary
 sidebar_label: Summary
 ---
 
-In this tutorial, you learned how to build a GraphQL server from scratch using graphql-yoga.
+In this tutorial, you learned how to build a simple HackerNews clone GraphQL server from scratch using graphql-yoga!
 
-The resolvers of your GraphQL server are implemented using Prisma Client which is responsible for database access.
+You can find the code of the full [code of the tutorial on GitHub](https://github.com/dotansimha/graphql-yoga/tree/master/examples/hackernews).
 
-Congratulations on completing the tutorial! We can't wait to see what you build.
+Congratulations on completing the tutorial! We can't wait to see what you build next.
